--- a/MagazineApp/MagazineApp/MagazineApp.csproj
+++ b/MagazineApp/MagazineApp/MagazineApp.csproj
@@ -15,13 +15,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Resources\Files\fuel.csv">
+    <None Update="1_DataAccess\Resources\Files\fuel.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Files\manufacturers.csv">
+    <None Update="1_DataAccess\Resources\Files\manufacturers.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Files\Pharmacies.csv">
+    <None Update="1_DataAccess\Resources\Files\Pharmacies.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
